failures: immutability